# mc-to-synq

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: example.yaml
mc_to_synq/: __init__.py  cli.py  config.py
mc_to_synq/auth/: __init__.py  monte_carlo.py  synq.py
mc_to_synq/deploy/: __init__.py  cleanup.py  custom_monitors.py  sql_tests.py
mc_to_synq/extract/: __init__.py  filters.py  monitors.py
mc_to_synq/migrate/: __init__.py  ootb_monitors.py  sql_tests.py  yaml_export.py
mc_to_synq/reporting/: __init__.py
tests/: __init__.py  test_classification.py  test_config.py  test_filters.py  test_sql_tests.py
